--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-input-range": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
